## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

INCLUDES =\
	$(PACKAGE_CFLAGS) -I/usr/include/gnet-2.0 -I/usr/lib/gnet-2.0/include/ -I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include

AM_CXXFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = cheech cheechd cheechbot cheechwebd

cheech_SOURCES = \
	cheech.cc\
	about_win.cc\
	about_win.hh\
	about_win_glade.cc\
	about_win_glade.hh\
	bot_base.cc\
	bot_base.hh\
	bot_random.cc\
	bot_random.hh\
	bot_simple.cc\
	bot_simple.hh\
	bot_lookahead.cc\
	bot_lookahead.hh\
	bot_friendly.cc\
	bot_friendly.hh\
	bot_mean.cc\
	bot_mean.hh\
	color_win.cc\
	color_win.hh\
	color_win_glade.cc\
	color_win_glade.hh\
	name_win.cc\
	name_win.hh\
	name_win_glade.cc\
	name_win_glade.hh\
	setup_bot_win.cc\
	setup_bot_win.hh\
	setup_bot_win_glade.cc\
	setup_bot_win_glade.hh\
	game_board.cc\
	game_board.hh\
	main_win.cc\
	main_win.hh\
	main_win_glade.cc\
	main_win_glade.hh\
	new_game_win.cc\
	new_game_win.hh\
	new_game_win_glade.cc\
	new_game_win_glade.hh\
	setup_game_win.cc\
	setup_game_win.hh\
	setup_game_win_glade.cc\
	setup_game_win_glade.hh\
	help_win.cc\
	help_win.hh\
	help_win_glade.cc\
	help_win_glade.hh\
	gnet_conn.cc\
	gnet_conn.hh\
	gnet_server.cc\
	gnet_server.hh\
	utility.cc\
	utility.hh\
	game_images.cc\
	game_images.hh\
	game_server.cc\
	game_server.hh\
	game_client.cc\
	game_client.hh\
	game_hole.cc\
	game_hole.hh\
	game_view.cc\
	game_view.hh\
	game_view_hole.cc\
	game_view_hole.hh\
	prefs.cc\
	prefs.hh\
	ajax_server.cc\
	ajax_server.hh\
	ajax_server_conn.cc\
	ajax_server_conn.hh\
	gnet-2.0/base64.c\
	gnet-2.0/base64.h\
	gnet-2.0/conn-http.c\
	gnet-2.0/conn-http.h\
	gnet-2.0/conn.c\
	gnet-2.0/conn.h\
	gnet-2.0/gnet-private.c\
	gnet-2.0/gnet-private.h\
	gnet-2.0/gnet.c\
	gnet-2.0/gnet.h\
	gnet-2.0/inetaddr.c\
	gnet-2.0/inetaddr.h\
	gnet-2.0/iochannel.c\
	gnet-2.0/iochannel.h\
	gnet-2.0/ipv6.c\
	gnet-2.0/ipv6.h\
	gnet-2.0/mcast.c\
	gnet-2.0/mcast.h\
	gnet-2.0/md5.c\
	gnet-2.0/md5.h\
	gnet-2.0/pack.c\
	gnet-2.0/pack.h\
	gnet-2.0/server.c\
	gnet-2.0/server.h\
	gnet-2.0/sha.c\
	gnet-2.0/sha.h\
	gnet-2.0/socks-private.c\
	gnet-2.0/socks-private.h\
	gnet-2.0/socks.c\
	gnet-2.0/socks.h\
	gnet-2.0/tcp.c\
	gnet-2.0/tcp.h\
	gnet-2.0/udp.c\
	gnet-2.0/udp.h\
	gnet-2.0/unix.c\
	gnet-2.0/unix.h\
	gnet-2.0/uri.c\
	gnet-2.0/uri.h\
	gnet-2.0/usagi_ifaddrs.c\
	gnet-2.0/usagi_ifaddrs.h

cheech_LDFLAGS = 

cheech_LDADD = \
	$(PACKAGE_LIBS) -lpthread -lgthread-2.0 -lglib-2.0

cheechd_SOURCES = \
	cheechd.cc\
	bot_base.cc\
	bot_base.hh\
	bot_random.cc\
	bot_random.hh\
	bot_simple.cc\
	bot_simple.hh\
	bot_lookahead.cc\
	bot_lookahead.hh\
	bot_friendly.cc\
	bot_friendly.hh\
	bot_mean.cc\
	bot_mean.hh\
	game_images.cc\
	game_images.hh\
	gnet_conn.cc\
	gnet_conn.hh\
	gnet_server.cc\
	gnet_server.hh\
	utility.cc\
	utilty.hh\
	game_server.cc\
	game_server.hh\
	game_client.cc\
	game_client.hh\
	game_board.cc\
	game_board.hh\
	game_hole.cc\
	game_hole.hh\
	prefs.cc\
	prefs.hh\
	ajax_server.cc\
	ajax_server.hh\
	ajax_server_conn.cc\
	ajax_server_conn.hh\
	gnet-2.0/base64.c\
	gnet-2.0/base64.h\
	gnet-2.0/conn-http.c\
	gnet-2.0/conn-http.h\
	gnet-2.0/conn.c\
	gnet-2.0/conn.h\
	gnet-2.0/gnet-private.c\
	gnet-2.0/gnet-private.h\
	gnet-2.0/gnet.c\
	gnet-2.0/gnet.h\
	gnet-2.0/inetaddr.c\
	gnet-2.0/inetaddr.h\
	gnet-2.0/iochannel.c\
	gnet-2.0/iochannel.h\
	gnet-2.0/ipv6.c\
	gnet-2.0/ipv6.h\
	gnet-2.0/mcast.c\
	gnet-2.0/mcast.h\
	gnet-2.0/md5.c\
	gnet-2.0/md5.h\
	gnet-2.0/pack.c\
	gnet-2.0/pack.h\
	gnet-2.0/server.c\
	gnet-2.0/server.h\
	gnet-2.0/sha.c\
	gnet-2.0/sha.h\
	gnet-2.0/socks-private.c\
	gnet-2.0/socks-private.h\
	gnet-2.0/socks.c\
	gnet-2.0/socks.h\
	gnet-2.0/tcp.c\
	gnet-2.0/tcp.h\
	gnet-2.0/udp.c\
	gnet-2.0/udp.h\
	gnet-2.0/unix.c\
	gnet-2.0/unix.h\
	gnet-2.0/uri.c\
	gnet-2.0/uri.h\
	gnet-2.0/usagi_ifaddrs.c\
	gnet-2.0/usagi_ifaddrs.h

cheechd_LDFLAGS = 

cheechd_LDADD = \
	$(PACKAGE_LIBS) -lpthread -lgthread-2.0 -lglib-2.0

cheechbot_SOURCES = \
	cheechbot.cc\
	bot_base.cc\
	bot_base.hh\
	bot_random.cc\
	bot_random.hh\
	bot_simple.cc\
	bot_simple.hh\
	bot_lookahead.cc\
	bot_lookahead.hh\
	bot_friendly.cc\
	bot_friendly.hh\
	bot_mean.cc\
	bot_mean.hh\
	game_board.cc\
	game_board.hh\
	game_images.cc\
	game_images.hh\
	gnet_conn.cc\
	gnet_conn.hh\
	utility.cc\
	utility.hh\
	game_client.cc\
	game_client.hh\
	game_hole.cc\
	game_hole.hh\
	gnet-2.0/base64.c\
	gnet-2.0/base64.h\
	gnet-2.0/conn-http.c\
	gnet-2.0/conn-http.h\
	gnet-2.0/conn.c\
	gnet-2.0/conn.h\
	gnet-2.0/gnet-private.c\
	gnet-2.0/gnet-private.h\
	gnet-2.0/gnet.c\
	gnet-2.0/gnet.h\
	gnet-2.0/inetaddr.c\
	gnet-2.0/inetaddr.h\
	gnet-2.0/iochannel.c\
	gnet-2.0/iochannel.h\
	gnet-2.0/ipv6.c\
	gnet-2.0/ipv6.h\
	gnet-2.0/mcast.c\
	gnet-2.0/mcast.h\
	gnet-2.0/md5.c\
	gnet-2.0/md5.h\
	gnet-2.0/pack.c\
	gnet-2.0/pack.h\
	gnet-2.0/server.c\
	gnet-2.0/server.h\
	gnet-2.0/sha.c\
	gnet-2.0/sha.h\
	gnet-2.0/socks-private.c\
	gnet-2.0/socks-private.h\
	gnet-2.0/socks.c\
	gnet-2.0/socks.h\
	gnet-2.0/tcp.c\
	gnet-2.0/tcp.h\
	gnet-2.0/udp.c\
	gnet-2.0/udp.h\
	gnet-2.0/unix.c\
	gnet-2.0/unix.h\
	gnet-2.0/uri.c\
	gnet-2.0/uri.h\
	gnet-2.0/usagi_ifaddrs.c\
	gnet-2.0/usagi_ifaddrs.h

cheechbot_LDFLAGS = 

cheechbot_LDADD = \
	$(PACKAGE_LIBS) -lpthread -lgthread-2.0 -lglib-2.0

cheechwebd_SOURCES = \
	cheechwebd.cc\
	bot_base.cc\
	bot_base.hh\
	bot_random.cc\
	bot_random.hh\
	bot_simple.cc\
	bot_simple.hh\
	bot_lookahead.cc\
	bot_lookahead.hh\
	bot_friendly.cc\
	bot_friendly.hh\
	bot_mean.cc\
	bot_mean.hh\
	game_images.cc\
	game_images.hh\
	gnet_conn.cc\
	gnet_conn.hh\
	gnet_server.cc\
	gnet_server.hh\
	utility.cc\
	utilty.hh\
	game_client.cc\
	game_client.hh\
	game_board.cc\
	game_board.hh\
	game_hole.cc\
	game_hole.hh\
	prefs.cc\
	prefs.hh\
	ajax_server.cc\
	ajax_server.hh\
	ajax_server_conn.cc\
	ajax_server_conn.hh\
	gnet-2.0/base64.c\
	gnet-2.0/base64.h\
	gnet-2.0/conn-http.c\
	gnet-2.0/conn-http.h\
	gnet-2.0/conn.c\
	gnet-2.0/conn.h\
	gnet-2.0/gnet-private.c\
	gnet-2.0/gnet-private.h\
	gnet-2.0/gnet.c\
	gnet-2.0/gnet.h\
	gnet-2.0/inetaddr.c\
	gnet-2.0/inetaddr.h\
	gnet-2.0/iochannel.c\
	gnet-2.0/iochannel.h\
	gnet-2.0/ipv6.c\
	gnet-2.0/ipv6.h\
	gnet-2.0/mcast.c\
	gnet-2.0/mcast.h\
	gnet-2.0/md5.c\
	gnet-2.0/md5.h\
	gnet-2.0/pack.c\
	gnet-2.0/pack.h\
	gnet-2.0/server.c\
	gnet-2.0/server.h\
	gnet-2.0/sha.c\
	gnet-2.0/sha.h\
	gnet-2.0/socks-private.c\
	gnet-2.0/socks-private.h\
	gnet-2.0/socks.c\
	gnet-2.0/socks.h\
	gnet-2.0/tcp.c\
	gnet-2.0/tcp.h\
	gnet-2.0/udp.c\
	gnet-2.0/udp.h\
	gnet-2.0/unix.c\
	gnet-2.0/unix.h\
	gnet-2.0/uri.c\
	gnet-2.0/uri.h\
	gnet-2.0/usagi_ifaddrs.c\
	gnet-2.0/usagi_ifaddrs.h

cheechwebd_LDFLAGS = 

cheechwebd_LDADD = \
	$(PACKAGE_LIBS) -lpthread -lgthread-2.0 -lglib-2.0
